--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>my first website</h1>
     <h3>I can push githup</h3>
+    <p>git push to push and git pull to pull data</p>
 </body>
 </html>
